[tool.poetry]
name = "tvallogging"
version = "0.0.2"
description = "Logging for Tonic Validate"
authors = ["Joe Ferrara <joeferrara@tonic.ai>"]
readme = "pypi_readme.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
tvalmetrics = "^0.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pydantic = "^2.3.0"
black = "^23.9.1"
pydantic-settings = "^2.0.3"
isort = "^5.12.0"
mypy = "^1.5.1"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true